@startuml
skinparam classAttributeIconSize 0
skinparam componentStyle uml2
skinparam linetype ortho

title Snowflake URL Shortener - Class Diagram (Hexagonal & DDD)

' --- Domain Layer ---
package "Domain" {
    package "Model" {
        class ShortUrl {
            +value: String
        }
        class LongUrl {
            +value: String
        }
        class UrlMapping {
            +shortUrl: ShortUrl
            +longUrl: LongUrl
            +createdAt: Long
        }
        class Worker {
            +id: Long?
            +workerNum: Long
            +workerName: String
            +status: WorkerStatus
            +createdAt: LocalDateTime?
            +updatedAt: LocalDateTime?
        }
        enum WorkerStatus {
            ACTIVE
            IDLE
        }
    }

    package "Port (Outbound)" {
        interface UrlPort {
            +save(mapping: UrlMapping): UrlMapping
            +saveAll(mappings: Flow<UrlMapping>): Flow<UrlMapping>
            +findByShortUrl(shortUrl: ShortUrl): UrlMapping?
            +findByLongUrl(longUrl: LongUrl): UrlMapping?
            +existsByShortUrl(shortUrl: ShortUrl): Boolean
        }
        interface WorkerPort {
            +findByWorkerNums(workerNums: List<Long>): Flow<Worker>
            +findByStatusAndUpdatedAtBefore(status: WorkerStatus, updatedAt: LocalDateTime): Flow<Worker>
            +updateUpdatedAt(workerNums: List<Long>, updatedAt: LocalDateTime): Int
            +cleanseWorkers(workerNums: List<Long>, updatedAt: LocalDateTime): Int
            +saveAll(workers: Flow<Worker>): Flow<Worker>
        }
        interface WorkerIdRepository {
            +assignWorkerIds(instanceId: String, requiredCount: Int): List<Long>
        }
    }

    package "Component/Generator" {
        class ShortUrlGenerator <<Service>> {
            -idGenerator: PooledIdGenerator
            -urlPort: UrlPort
            -random: Random
            +generate(): ShortUrl
        }
        interface IdGenerator {
            +nextId(): Long
        }
        class SnowflakeIdGenerator {
            -workerId: Long
            -timeSource: Supplier<Long>
            -lastTimestamp: Long
            -sequence: Long
            -mutex: Mutex
            -workerIdBits: Long
            -sequenceBits: Long
            -maxWorkerId: Long
            -maxSequence: Long
            -workerIdShift: Long
            -timestampLeftShift: Long
            +nextId(): Long
        }
        class Base62Encoder {
            {static} +ALPHABET: String
            {static} +encode(id: Long): String
        }
        class PooledIdGenerator  {
             -idGenerators: List<IdGenerator>
             -index: AtomicInteger
             +nextId(): Long
        }
        class MonitoredIdGenerator {
            -delegate: IdGenerator
            -timer: Timer
            +nextId(): Long
        }
    }
}

' --- Application Layer ---
package "Application" {
    package "Event" {
        class ShortUrlCreatedEvent {
            +shortUrl: ShortUrl
            +longUrl: LongUrl
            +createdAt: Long
        }
    }
    
    package "Usecase" {
        class ShortenUrlUseCase <<Usecase>> {
            -urlPort: UrlPort
            -shortUrlGenerator: ShortUrlGenerator
            -eventPublisher: ApplicationEventPublisher
            +shorten(longUrlStr: String): UrlMapping
        }
        class RetrieveUrlUseCase <<Usecase>> {
            -urlPort: UrlPort
            +retrieve(shortUrlStr: String): UrlMapping?
        }
        class WorkerCleansingUseCase <<Usecase>> {
            -workerPort: WorkerPort
            +cleanseIdleWorkers(): Int
        }
        class WorkerHeartbeatUseCase <<Usecase>> {
            -workerPort: WorkerPort
            +heartbeat(workerNum: Long): Int
        }
    }
}

' --- Adapter Layer ---
package "Adapter" {
    package "Inbound (Web)" {
        class ShortenerHandler <<Component>> {
            -shortenUrlUseCase: ShortenUrlUseCase
            -retrieveUrlUseCase: RetrieveUrlUseCase
            -baseUrl: String
            -shortenPathPrefix: String
            +shorten(request: ServerRequest): ServerResponse
            +redirect(request: ServerRequest): ServerResponse
            +health(request: ServerRequest): ServerResponse
            +ping(request: ServerRequest): ServerResponse
        }
        class WorkerInfoHandler <<Component>> {
            -assignedWorkerInfo: AssignedWorkerInfo
            +getActiveWorkers(request: ServerRequest): ServerResponse
        }
        class WorkerCleansingHandler <<Component>> {
            -workerCleansingUseCase: WorkerCleansingUseCase
            +cleanseWorkers(request: ServerRequest): ServerResponse
        }
    }

    package "Outbound (Persistence)" {
        class UrlPersistenceAdapter <<Repository>>  {
            -repository: ShortUrlRepository
            +save(mapping: UrlMapping): UrlMapping
            +saveAll(mappings: Flow<UrlMapping>): Flow<UrlMapping>
            +findByShortUrl(shortUrl: ShortUrl): UrlMapping?
            +findByLongUrl(longUrl: LongUrl): UrlMapping?
            +existsByShortUrl(shortUrl: ShortUrl): Boolean
        }
        class WorkerPersistenceAdapter <<Repository>>  {
            -workerRepository: WorkerRepository
            +findByWorkerNums(workerNums: List<Long>): Flow<Worker>
            +findByStatusAndUpdatedAtBefore(status: WorkerStatus, updatedAt: LocalDateTime): Flow<Worker>
            +updateUpdatedAt(workerNums: List<Long>, updatedAt: LocalDateTime): Int
            +cleanseWorkers(workerNums: List<Long>, updatedAt: LocalDateTime): Int
            +saveAll(workers: Flow<Worker>): Flow<Worker>
        }
        class JpaWorkerIdRepository <<Repository>>  {
            -workerRepository: WorkerRepository
            +assignWorkerIds(instanceId: String, requiredCount: Int): List<Long>
        }

        interface ShortUrlRepository <<Spring Data>> {
            +findByShortUrl(shortUrl: String): ShortUrlEntity?
            +findByLongUrl(longUrl: String): ShortUrlEntity?
        }
        interface WorkerRepository <<Spring Data>> {
            +findByWorkerNumIn(workerNums: List<Long>): List<WorkerEntity>
            +findByStatusAndUpdatedAtBefore(status: WorkerStatus, updatedAt: LocalDateTime): List<WorkerEntity>
            +updateUpdatedAtByWorkerNums(workerNums: List<Long>, updatedAt: LocalDateTime): Int
            +cleanseWorkers(workerNums: List<Long>, updatedAt: LocalDateTime): Int
        }
    }
    
    package "Outbound (Event)" {
        class UrlPersistenceEventListener <<Component>> {
            -urlPort: UrlPort
            -cacheManager: CacheManager
            -eventChannel: Channel<ShortUrlCreatedEvent>
            +handleShortUrlCreatedEvent(event: ShortUrlCreatedEvent): Unit
            -flush(batch: List<UrlMapping>): Unit
        }
    }
}

' --- Config ---
package "Config" {
    class AssignedWorkerInfo {
        +instanceId: String
        +workerIds: List<Long>
    }
}

' --- Relationships ---

' Application Layer depends on Domain Layer (Ports and Components)
ShortenUrlUseCase --> UrlPort : uses
ShortenUrlUseCase --> ShortUrlGenerator : uses
ShortenUrlUseCase ..> ShortUrlCreatedEvent : publishes
RetrieveUrlUseCase --> UrlPort : uses
WorkerCleansingUseCase --> WorkerPort : uses
WorkerHeartbeatUseCase --> WorkerPort : uses

' Domain Layer components usage
ShortUrlGenerator --> PooledIdGenerator : uses
ShortUrlGenerator --> Base62Encoder : uses
ShortUrlGenerator --> UrlPort : uses
PooledIdGenerator --> IdGenerator : uses
MonitoredIdGenerator --> IdGenerator : delegates to
IdGenerator <|.. SnowflakeIdGenerator
IdGenerator <|.. PooledIdGenerator
IdGenerator <|.. MonitoredIdGenerator

UrlMapping *-- ShortUrl
UrlMapping *-- LongUrl
Worker *-- WorkerStatus
ShortUrlCreatedEvent *-- ShortUrl
ShortUrlCreatedEvent *-- LongUrl

' Adapter Layer depends on Application Layer (Use Cases) and Domain Layer (Ports)
ShortenerHandler --> ShortenUrlUseCase : uses
ShortenerHandler --> RetrieveUrlUseCase : uses
WorkerInfoHandler --> AssignedWorkerInfo : uses
WorkerCleansingHandler --> WorkerCleansingUseCase : uses

' Event Listener
UrlPersistenceEventListener ..> ShortUrlCreatedEvent : listens
UrlPersistenceEventListener --> UrlPort : uses

' Adapter Layer (Outbound) implements Domain Ports
UrlPersistenceAdapter ..|> UrlPort
WorkerPersistenceAdapter ..|> WorkerPort
JpaWorkerIdRepository ..|> WorkerIdRepository

' Adapter Layer (Outbound) uses Persistence mechanisms (Spring Data Repositories)
UrlPersistenceAdapter --> ShortUrlRepository
WorkerPersistenceAdapter --> WorkerRepository
JpaWorkerIdRepository --> WorkerRepository

@enduml